# rust-word-extraction

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml
src/: app.rs  main.rs
